fixing problem of old sdk